removed attempts at overflow correction, removing overflows in css

--- a/files/css/style.css
+++ b/files/css/style.css
@@ -47,7 +47,6 @@ html {
 	-webkit-text-size-adjust: 100%; /* Prevent iOS text size adjust on orientation change without disabling user zoom */
 	-ms-text-size-adjust: 100%;
 	position: relative;
-    overflow: hidden;
 	}
 
 body {
@@ -60,7 +59,6 @@ body {
 	text-align: left; 
 	position: relative;
 	background: #ffffff;
-    overflow: hidden;
 	height: 100%;
 	}
 ::selection { background:#0d0d0d; color:#ffffff; }
@@ -68,8 +66,8 @@ body {
 ::-webkit-selection { background:#0d0d0d; color:#ffffff; }
 
 body > .mainwrapper {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   overflow-y: scroll;
   -webkit-overflow-scrolling: touch; /* enables “momentum” (smooth) scrolling */
 }
@@ -405,7 +403,7 @@ pre, code {
 2. GENERAL ELEMENTS
 ------------------------------------------------*/
 #page-content {
-	overflow: hidden;
+	/*overflow: hidden;*/
 	margin: 0;
 	min-width: 1080px;
 	/*position: relative;*/
@@ -698,7 +696,7 @@ nav#main-nav {
 	width: 100%; 
 	height: 100%; 
 	z-index: 100000;
-	overflow:hidden;
+	/*overflow:hidden;*/
 	display: none;
 	}
 	
